--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://people.duke.edu/~aql3/'>link to example</a>
+        If you are not redirected automatically, follow the <a href='http://people.duke.edu/~aql3/'>link to my personal page</a>
     </body>
 </html>
